# qtopencv

./: CMakeCache.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
